v0.0.1/modules/schema/pages/class/ErpLedgerEntry.adoc
= `ErpLedgerEntry`
:toclevels: 4


+++Details of an individual entry in a ledger, which was posted from a journal on the posted date.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ErpLedgerEntry`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/ErpIdentifiedObject.adoc[`ErpIdentifiedObject`]
*** *`ErpLedgerEntry`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
ErpLedgerEntry {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}





Status {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ErpJournalEntry {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



UserAttribute {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ErpLedBudLineItem {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ErpLedger {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}





ErpLedgerEntry -> Status: status


ErpLedgerEntry -> ErpJournalEntry: ErpJounalEntry


ErpLedgerEntry -> UserAttribute: UserAttributes


ErpLedgerEntry -> ErpLedBudLineItem: ErpLedgerEntry


ErpLedgerEntry -> ErpLedger: ErpLedger


ErpLedgerEntry -> DiagramObject: DiagramObjects


ErpLedgerEntry -> InstanceSet: InstanceSet


ErpLedgerEntry -> Name: Names


ErpLedgerEntry -> ChangeSetMember: PropertiesCIMDataObject


ErpLedgerEntry -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<ErpLedger,`ErpLedger`>>
| 1
| xref::class/ErpLedger.adoc[`ErpLedger`]
| n/a

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<ErpJounalEntry,`ErpJounalEntry`>>
| 0..1
| xref::class/ErpJournalEntry.adoc[`ErpJournalEntry`]
| n/a

| <<ErpLedgerEntry,`ErpLedgerEntry`>>
| 0..1
| xref::class/ErpLedBudLineItem.adoc[`ErpLedBudLineItem`]
| n/a

| <<accountID,`accountID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Account identifier for this entry.+++

| <<accountKind,`accountKind`>>
| 0..1
| xref::enumeration/ErpAccountKind.adoc[`ErpAccountKind`]
| +++Kind of account for this entry.+++

| <<amount,`amount`>>
| 0..1
| xref::class/Money.adoc[`Money`]
| +++The amount of the debit or credit for this account.+++

| <<postedDateTime,`postedDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date and time this entry was posted to the ledger.+++

| <<status,`status`>>
| 0..1
| xref::class/Status.adoc[`Status`]
| n/a

| <<transactionDateTime,`transactionDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date and time journal entry was recorded.+++

| <<UserAttributes,`UserAttributes`>>
| 0..*
| xref::class/UserAttribute.adoc[`UserAttribute`]
| n/a

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#accountID]
=== `accountID`
+++Account identifier for this entry.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ErpLedgerEntry.accountID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#accountKind]
=== `accountKind`
+++Kind of account for this entry.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ErpLedgerEntry.accountKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/ErpAccountKind.adoc[`ErpAccountKind`]


|===

//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#amount]
=== `amount`
+++The amount of the debit or credit for this account.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ErpLedgerEntry.amount`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ErpJounalEntry]
=== `ErpJounalEntry`


[cols="h,4",width=65%]
|===
| URI
| `cim:ErpLedgerEntry.ErpJounalEntry`
| Cardinality
| 0..1
| Type
| xref::class/ErpJournalEntry.adoc[`ErpJournalEntry`]


|===

//[discrete]
[#ErpLedger]
=== `ErpLedger`


[cols="h,4",width=65%]
|===
| URI
| `cim:ErpLedgerEntry.ErpLedger`
| Cardinality
| 1
| Type
| xref::class/ErpLedger.adoc[`ErpLedger`]


|===

//[discrete]
[#ErpLedgerEntry]
=== `ErpLedgerEntry`


[cols="h,4",width=65%]
|===
| URI
| `cim:ErpLedgerEntry.ErpLedgerEntry`
| Cardinality
| 0..1
| Type
| xref::class/ErpLedBudLineItem.adoc[`ErpLedBudLineItem`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#postedDateTime]
=== `postedDateTime`
+++Date and time this entry was posted to the ledger.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ErpLedgerEntry.postedDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#status]
=== `status`


[cols="h,4",width=65%]
|===
| URI
| `cim:ErpLedgerEntry.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#transactionDateTime]
=== `transactionDateTime`
+++Date and time journal entry was recorded.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ErpLedgerEntry.transactionDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#UserAttributes]
=== `UserAttributes`


[cols="h,4",width=65%]
|===
| URI
| `cim:ErpLedgerEntry.UserAttributes`
| Cardinality
| 0..*
| Type
| xref::class/UserAttribute.adoc[`UserAttribute`]


|===


